--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/elements": "^1.3.21",
+    "@react-navigation/native": "^6.1.9",
+    "axios": "^1.6.0",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
